# cryptofarm

./: .flake8  .gitignore  alert_rules.yaml  requirements.txt  temp_import_test_eigenlayer.py
airdrops/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  fix_flake8_random_activity.py  fix_remaining_flake8.py  fix_test_flake8.py  mypy.ini  notifications.yaml  pyproject.toml
airdrops/.github/workflows/: ci.yml
airdrops/docs/: analytics.md  capital_allocation.md  configuration_examples.md  generate_api_docs.py  module_deps.dot  monitoring.md  risk_management.md  scheduler.md  testing_strategy.md  troubleshooting_guide.md
airdrops/docs/protocols/: hyperliquid.md  layerzero.md  multi_protocol_strategy.md  scroll.md  scroll_strategy_guide.md  zksync.md  zksync_strategy_guide.md
airdrops/docs/sphinx/: Makefile  analytics.rst  capital_allocation.rst  conf.py  index.rst  protocols.rst  risk_management.rst  scheduler.rst  testing_strategy.rst  troubleshooting_guide.rst
airdrops/docs/sphinx/_build/html/: .buildinfo  analytics.html  capital_allocation.html  genindex.html  index.html  installation_guide.html  monitoring.html  objects.inv  operational_runbooks.html  protocols.html  py-modindex.html  risk_management.html  scheduler.html  search.html  searchindex.js  security_best_practices.html  setup_guide.html  shared.html  troubleshooting_guide.html
airdrops/monitoring/dashboards/: README.md  alerting-system.json  capital-allocation.json  risk-management.json  scheduler-performance.json  system-overview.json
airdrops/src/airdrops/analytics/: __init__.py  optimizer.py  portfolio.py  predictor.py  reporter.py  tracker.py
airdrops/src/airdrops/capital_allocation/: __init__.py  engine.py
airdrops/src/airdrops/monitoring/: __init__.py  aggregator.py  alerter.py  collector.py  health_checker.py
airdrops/src/airdrops/monitoring/config/: alert_rules.yaml  (+1 more)
airdrops/src/airdrops/protocols/: __init__.py  hyperliquid.py
airdrops/src/airdrops/risk_management/: __init__.py  core.py
airdrops/src/airdrops/scheduler/: __init__.py  bot.py
airdrops/src/airdrops/shared/: __init__.py  config.py  connection_manager.py  constants.py  logger.py  transaction_utils.py  utils.py
airdrops/tests/: test_alerting.py  test_capital_allocation.py  test_end_to_end.py  test_failure_recovery.py  test_health_checker.py  test_hyperliquid.py  test_monitoring.py  test_optimizer.py  test_performance_benchmarks.py  test_portfolio.py  test_predictor.py  test_property_based.py  test_reporter.py  test_risk_management.py  test_scheduler.py  test_tracker.py
airdrops/tests/integration/: __init__.py  test_capital_allocation_integration.py  test_monitoring_integration.py  test_scheduler_protocols.py  test_scroll_integration.py  test_zksync_integration.py
airdrops/tests/protocols/: __init__.py  test_eigenlayer.py  test_layerzero.py  test_scroll.py  test_zksync.py  test_zksync_coverage.py
(+98 files in other folders)
