[project]
name = "airdrops"
version = "0.1.0"
description = ""
authors = [
    {name = "repengine",email = "wheens91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0,<4.0"
dependencies = [
    "web3 (==7.12.0)",
    "hyperliquid-python-sdk (==0.15.0)",
    "solana (==0.36.6)",
    "python-dotenv (==1.1.0)",
    "requests (==2.32.3)",
    "pendulum (==3.1.0)",
    "pytest-mock (>=3.14.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "airdrops", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.11.12"
pytest-mock = "^3.14.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
