[project]
name = "airdrops"
version = "0.2.0"
description = ""
authors = [
    {name = "repengine",email = "wheens91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0,<4.0"
dependencies = [
    "web3 (==7.12.0)",
    "hyperliquid-python-sdk (==0.15.0)",
    "solana (==0.36.6)",
    "python-dotenv (==1.1.0)",
    "requests (==2.32.3)",
    "pendulum (==3.1.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "prometheus-client (>=0.20.0,<1.0.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.32.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "airdrops", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.11.12"
pytest-mock = "^3.14.1"
pandas-stubs = "^2.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.135.2"
types-psutil = "^7.0.0.20250601"
types-pyyaml = "^6.0.12.20250516"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src/airdrops --cov-report=html --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/airdrops"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/abi/*",
    "*/config/*"
]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
